# ClangAutoModules

./: .gitignore  .travis.yml  CMakeLists.txt  ClangModules.cmake  ClangModules.in.cmake  ClangModules.py  LICENSE.md  README.md  clang_modules  clang_modules++  cms.cpp  compile-cms.cpp  compile.cpp  gen.py  gen.sh  header-test.cpp  parse_header.rb  run_test.sh  run_tests.sh  working_pcms
checks/: modules_marked_as_system.py
docs/: CMakeScript.md  ExternalConfig.md  Modulemaps.md  PythonScript.md
files/: Geant4.modulemap  Vc.modulemap  boost_min.modulemap  bullet.modulemap  bullet_new.modulemap  bullet_old.modulemap  eigen3_big.modulemap  eigen3_min.modulemap  glog.modulemap  gtest.modulemap  libc.modulemap  libc_full.modulemap  libc_no_signal.modulemap  linux.modulemap  nlohmann.json  nlohmann.modulemap  nlohmann_json2.modulemap  posix-mono.modulemap  posix-parts.modulemap  sdl2.modulemap  sfml.modulemap  sfml_newer.modulemap  sfml_old.modulemap  stl.modulemap  stl.yaml  stl03.modulemap  stl11.modulemap  stl14.modulemap  stl17.modulemap  sys_types_only.modulemap  tinyxml.modulemap  tinyxml2.modulemap
inc-cms/boost/: module.modulemap
inc/boost/: .module.modulemap.kate-swp  module.modulemap
inc/boost/graph/: iteration_macros.hpp
inc/boost/math/special_functions/detail/: unchecked_factorial.hpp
scripts/: check_pcms.py  gen.py  make_release.sh  run_test.sh  run_test_neg.sh  run_tests.sh  run_travis.sh  size_check_pcms.py
tests/Vc/: CMakeLists.txt  NEEDS_PCMS  main.cpp
tests/boost_min/: CMakeLists.txt
tests/bullet/: CMakeLists.txt  main.cpp
tests/check-only-libc/: CMakeLists.txt  NEEDS_PCMS
tests/checks/: clangless-build.py  console-output.py  different-cache.py  needed-flags.py
tests/checks/clangless-build-data/: CMakeLists.txt
tests/checks/console-output-data/: CMakeLists.txt
tests/checks/different-cache-data/: CMakeLists.txt
tests/checks/needed-flags-data/: CMakeLists.txt  main.cpp
tests/compilation/Geant4/: CMakeLists.txt  main.cpp
tests/compilation/boost_min/: main.cpp
tests/compilation/check-only-libc/: FORBIDDEN_PCMS  main.cpp
tests/compilation/custom_modulemap/inc/: MyHeader.h
tests/compilation/custom_modulemap/mods/: MyLib.modulemap
tests/compilation/different-directory/: CMakeLists.txt
tests/compilation/different-vfs/: CMakeLists.txt
tests/compilation/eigen3/: main.cpp
tests/compilation/glog/: CMakeLists.txt
tests/compilation/gtest/: NEEDS_PCMS  main.cpp
tests/compilation/libc_with_cxx/: main.cpp
tests/compilation/linux/: CMakeLists.txt  main.cpp
tests/compilation/merge_linux_sdl2/: NEEDS_PCMS  main.cpp
tests/compilation/nlohmann_json/: CMakeLists.txt  NEEDS_PCMS  main.cpp
tests/compilation/posix/: CMakeLists.txt  NEEDS_PCMS  main.cpp
tests/compilation/pthreads/: CMakeLists.txt  main.cpp
tests/compilation/require-check/: CMakeLists.txt  EXPECTED_ERROR
tests/compilation/sdl2/: main.cpp
tests/compilation/sfml/: main.cpp
tests/compilation/stl-03/: main.cpp
tests/compilation/stl-11/: CMakeLists.txt
tests/compilation/stl-14/: CMakeLists.txt  main.cpp
tests/compilation/sys_types/: main.cpp
tests/compilation/tinyxml/: NEEDS_PCMS
tests/custom_modulemap/: CMakeLists.txt  NEEDS_PCMS  main.cpp
tests/different-directory/: NEEDS_PCMS
tests/eigen3/: CMakeLists.txt  NEEDS_PCMS
tests/gtest/: CMakeLists.txt
tests/libc_with_cxx/: CMakeLists.txt
tests/linux/: CMakeLists.txt
tests/merge_linux_sdl2/: CMakeLists.txt
tests/sdl2/: CMakeLists.txt  NEEDS_PCMS
tests/sfml/: CMakeLists.txt  NEEDS_PCMS
tests/stl-03/: CMakeLists.txt
tests/stl-11/: CMakeLists.txt  NEEDS_PCMS
tests/stl-14/: CMakeLists.txt  NEEDS_PCMS
tests/stl-basic/: CMakeLists.txt  main.cpp
tests/stl-full/: CMakeLists.txt  main.cpp
tests/sys_types/: CMakeLists.txt
tests/tinyxml/: CMakeLists.txt  main.cpp
tests/tinyxml2/: CMakeLists.txt  NEEDS_PCMS  main.cpp
